--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
    <div>
    <div class="center">
-      <input type="reset" value="danger!"/>
+      <input type="reset" value="reset form?"/>
       <input type="submit" value="click me!"/>
    </div>
  </div>
