--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,11 @@
 
     	 <form action="https://formspree.io/xzbroqnj" method="POST">
 <fieldset>
+<div class="legend">
    <legend>
       <h2 class="elegantshadow">Look Into the Shadows</h2>
     </legend>
+</div>
    <h2>Who Are You?</h2>
    <div class = "contact">
       <label for ="first">First Name:</label>
