--- a/tarot.html
+++ b/tarot.html
@@ -131,7 +131,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>Copyright © MyCompany. All rights reserved.</p>
+        <img src="images/banner.png" alt="blades in the dark banner" id="banner">
+        <p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
       </div>
     </div>
   </div>
