--- a/tarot.html
+++ b/tarot.html
@@ -120,7 +120,7 @@
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 col-md-offset-5 text-center card">
+			<div class="col-md-12 text-center card">
 				<p id="card_display4"></p>
 			</div>
         </div>
