--- a/faction.html
+++ b/faction.html
@@ -186,51 +186,6 @@
         <p>
             *Borrowed from <a href="https://bladesinthedark.com/faction-game">https://bladesinthedark.com/faction-game</a>.
         </p>
-<table>
-        <caption>
-            Factions of Duskvol (thus far)
-        </caption>
-      <thead>
-        <tr>
-        <th scope="col" class="colhead">Listing</th>
-        <th scope="col" class="colhead">Area</th>
-        <th scope="col" class="colhead">Name</th>
-        <th scope="col" class="colhead">Tier</th>
-        <th scope="col" class="colhead">Hold</th>
-        <th scope="col" class="colhead">Standing</th>
-        <th scope="col" class="colhead">Description</th>
-        </tr>
-      </thead>
-      <tbody>
-       <tr>
-         <th scope="row" class="rowhead">1</th>
-         <td>Neighborhood</td>
-         <td>The Nightmarket</td>
-         <td> - </td>
-         <td>Strong</td>
-         <td>+1</td>
-         <td>If you know where to look, you can get just about anything you want at the Nightmarket. While they'll take anyone's coin, they don't care for the uptown elites</td>
-       </tr>
-       <tr>
-         <th scope="row" class="rowhead">2</th>
-         <td>The Fringe</td>
-         <td>The Weeping Lady</td>
-         <td>II</td>
-         <td>Weak</td>
-         <td>+1</td>
-         <td>A charity and pseudo-religion, honoring the first Lod Governor of Doskvol, Lady Devera, said to be a champion for the poor after losing her two children.</td>
-       </tr>
-       <tr>
-         <th scope="row" class="rowhead">3</th>
-         <td>Labor & Trade</td>
-         <td>Gondoliers Union</td>
-         <td>III</td>
-         <td>Strong</td>
-         <td>-1</td>
-         <td>Horses are almost non-existant in Duskvol, and most folks wouldn't be caught dead riding a goat, which leaves the inky water-ways of the city as the most efficient means of travel. And you aren't going to be going anywhere without first paying the gondoliers.</td>
-       </tr>
-      </tbody>
-    </table>
 <h2>Faction Notes</h2>
 <div id="accordion">
     <h3>Gondoliers (-1)</h3>
@@ -239,7 +194,10 @@
     </div>
     <h3>The Weeping Lady (+1)</h3>
     <div>
-        <p>A myth to some, but to anyone who has grown up on the street an all too real presence. To the uninitiated the organization is a band of child stanchers, controlled by the machniations of a madwoman. Yet you've seen first hand the opportunities and care the organization gives to the runaways (or often the thrownaways). You've helped them out, and they are bound to return the favor with their network of streeturchins and thieves</p>
+        <p>A myth to some, but to anyone who has grown up on the street an all too real presence. To the uninitiated the organization is a band of child stanchers, controlled by the machniations of a madwoman. Yet you've seen first hand the opportunities and care the organization gives to the runaways (or often the thrownaways). You've helped them out, and they are bound to return the favor with their network of streeturchins and thieves
+        <br>
+        <strong>Your positive relationship with the Weeping Lady has earned you the right to <a href="tarot.html">free tarot readings!</a></strong>
+        </p>
     </div>
         <h3>The Nightmarket (+1)</h3>
         <div>
