--- a/faction.html
+++ b/faction.html
@@ -19,6 +19,7 @@
 </script>
     <!--jQuery UI-->
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!--JavaScript-->
@@ -187,22 +188,28 @@
         </p>
 <h2>Faction Notes</h2>
 <div id="accordion">
+  <div class="faction-rating">
     <h3>Gondoliers (-1)</h3>
+  </div>
     <div>
         <p>The canal boat operators. Venerated by the ancient tradition. Said to know occult secrets from the many things submerged beneath the inky tide. They're the main means of transportation in the city...say for a quick getaway from a heist, and you've managed to piss them off. Impressive!</p>
     </div>
+  <div class="faction-rating">
     <h3>The Weeping Lady (+1)</h3>
+  </div>
     <div>
         <p>A myth to some, but to anyone who has grown up on the street an all too real presence. To the uninitiated the organization is a band of child stanchers, controlled by the machniations of a madwoman. Yet you've seen first hand the opportunities and care the organization gives to the runaways (or often the thrownaways). You've helped them out, and they are bound to return the favor with their network of streeturchins and thieves
         <br>
         <strong>Your positive relationship with the Weeping Lady has earned you the right to <a href="tarot.html">free tarot readings!</a></strong>
         </p>
     </div>
+      <div class="faction-rating">
         <h3>The Nightmarket (+1)</h3>
+      </div>
         <div>
             <p>If you ask anyone where the heart of commerce is, they'll say uptown with the big wigs and government folks, but if you ask anyone where the heart of the city is, they'll tell you the Nightmarket. It is the part of the city that never sleeps, and in fact relishes the liminal state it seems to exist in--one foot in legitimate commerce, one in the exotic. Since your crew is set up in this part of town, it's best to stay on their good side.</p>
         </div>
-        </div>
+    </div>
     </main>
     <footer>
         <img src="images/banner.png" alt="blades in the dark banner" id="banner">
